--- a/Prototype/.classpath
+++ b/Prototype/.classpath
@@ -11,6 +11,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/לימודים/סמסטר 5/שיטות הנדסיות לפיתוח מערכות תכנה/פרוייקט/Ex-05_jdbc/mysql-connector-java-5.1.19-bin.jar"/>
+	<classpathentry kind="lib" path="mysql-connector-java-5.1.19-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
